removed relative velocity subsection

--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -71,7 +71,13 @@ with previous studies of dark matter to baryon separations. The
 extension of the theoretical predictions and observational results
 towards low mass bi-modal dark matter configurations opens up the
 possibility for a new statistical test of  $\Lambda$CDM.
+
+
+NOTA: tomar $186\pm30$ para el DM-DM displacement.
+
 \end{abstract}
+
+
 
 \begin{keywords}
 {cosmology: theory -- dark matter} 
@@ -243,15 +249,6 @@ ratio. The second quantity, the projected DM-baryon distance, is not
 directly available from a DM-only simulation but, as we show in the
 Results section, can be inferred from the available information.  
  
-
-
-%In order to gain better insight, we use two
-%quantities that can be infered from the simulation. The first one is
-%the sub-structure velocity as a fraction of the host's circular
-%velocity, $||\vec{v}||/V_{\rm c, host}$, as a measure of the the
-%strength of the merger.  The second onw is $\mu$, which measures the geometry
-%(head-on vs. grazing) of each interaction. 
-
 The physical quantities described above can be used to describe
 the three main stages in a bullet-like encounter. First, the sub-halo
 crosses the virial radius of the host halo starting a head on
@@ -341,23 +338,6 @@ of the group SL2S SJ08544-0121 ($\sigma_{host}=341^{+43}_{-109}$\kms and
 $\sigma_{sub}=185^{+30}_{-62}$\kms) reported by
 \citet{2013A&A...552A..80M} and the DM displacement inferred from the
 data presented by \cite{Gastaldello}. 
-
-
-%\subsection{Relative Velocities}
-%\label{sec:velocities}
-
-%\begin{figure*}
-%\begin{center}
-%\includegraphics[width=0.9\textwidth]{figure_3.eps}
-%\end{center}
-%\caption{Integrated probability distribution for the relative velocity of the
-%sub-halo with respect to its host. The left panel shows the results
-%in physical units while the right panel show the same values
-%normalized by the circular velocity of the host halo. The line encoding
-%follows the same structure as Figure \ref{fig:displacement}}
-%\label{fig:velocities}
-%\end{figure*}
-
 
 \begin{figure*}
 \begin{center}
@@ -510,8 +490,8 @@ of clusters, consistent with the results reported by
 
 Recently \citep{Foex2013} presented an analysis of $80$ galaxy groups
 from the SL2S sample. From the light distribution, only $34$ objects
-($\approx 42\%$) have regular isophotes, $33$ had ellongated
-isophotes (hints of merging system), and $13$ ($\approx 16\%$) had a
+($\sim 42\%$) have regular isophotes, $33$ had ellongated
+isophotes (hints of merging system), and $13$ ($\sim 16\%$) had a
 clear bi-modal light distribution.  
 
 The bi-modal objects are defined to have at least a clear second
